# jolt-react-native

./: App.tsx  README.md  app.json  guest-to-vec.py  package-lock.json  package.json
android/: settings.gradle
android/app/src/main/res/values/: strings.xml
ios/exporustdemo/: Info.plist
modules/my-rust-module/: index.ts
modules/my-rust-module/ios/: MyRustModule.swift
native_rust_lib/: Cargo.toml
native_rust_lib/guest/: Cargo.toml
native_rust_lib/guest/src/: lib.rs
native_rust_lib/src/: executable.rs  guest  lib.rs
