[package]
name = "native_rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = ["guest"]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
jolt = { package = "jolt-sdk",  git = "https://github.com/Hmac512/jolt", branch = "fib-react-native", features = ["std"] }
guest = { path = "./guest" }
proc-macro2 = "1.0.79"
serde = "1.0.197"
serde_json = "1.0.115"
ark-serialize = "0.4.2"
serde_derive = "1.0.197"

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }


[lib]
crate-type = ["staticlib", "cdylib"]
